Fixed alignment for features

--- a/src/CSS/_feature.scss
+++ b/src/CSS/_feature.scss
@@ -38,7 +38,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            text-align: left;
+            
 
             
             h2, p {
@@ -47,11 +47,12 @@
 
             h2 {
                 font-size: $h2;
+                text-align: center;
                 
             }
 
             p{
-                
+                text-align: left;
                 font-size: 1.25rem;
             }
         }
